# injaprocess_code-repo

./: .dockerignore  .gitignore  ARD.md  CLAUDE.md  Makefile  PLAN.md  PRD.md  pyproject.toml  requirements-dev.txt
.claude/: settings.json
config/: engine.env.example  ui-backend.env.example  ui-users.example.json  upload-bot.env.example
control-bot/: README.md  VERIFICATION.md  runtime.env.example
deploy/: Caddyfile  control-bot.Dockerfile  docker-compose.yml  git-push.Dockerfile  ui-backend.Dockerfile  upload-bot.Dockerfile
engine/: README.md  pyproject.toml  requirements.txt
engine/allocate_id/: README.md  __init__.py  cli.py
engine/engine_common/: __init__.py
engine/extract_attachment/: README.md  __init__.py  cli.py
engine/layout/: README.md  __init__.py  cli.py
engine/merge/: README.md  __init__.py  cli.py
engine/tests/: conftest.py  test_allocate_id.py  test_common.py  test_extract_attachment.py  test_id_ledger.py  test_layout_cycles.py  test_layout_dummy_orphan.py  test_layout_layered.py  test_layout_serpentine.py  test_layout_topo.py  test_merge_attach.py  test_merge_cli.py  test_merge_delta.py  test_merge_edit_ops.py  test_merge_layout.py  test_merge_new.py  test_merge_resolve.py  test_merge_restructure.py  test_merge_subprocess.py  test_merge_tombstone.py  test_schema_consolidation.py  test_schema_restructure_tombstone.py  test_subprocess_hardening.py  test_subprocess_schema.py  test_transcribe.py  test_validate.py
engine/transcribe/: README.md  __init__.py  cli.py
engine/validate/: cli.py
schemas/: README.md  candidate.schema.json  conflicts.schema.json  consolidation.schema.json  delta.schema.json  idseq.schema.json  overview.schema.json  process.schema.json  (+4 more)
ui-backend/: README.md  pyproject.toml  requirements.txt
ui-backend/inja_ui_backend/: app.py  auth.py  config.py  engine.py  gitcommit.py  ids.py  models.py  save.py  storage.py  tests_helpers.py
ui-backend/inja_ui_backend/routers/: auth.py  departments.py  pending.py  processes.py
ui-backend/tests/: conftest.py  test_auth.py  test_config.py  test_departments.py  test_engine.py  test_gitcommit.py  test_pending.py  test_processes_create.py  test_processes_delete.py  test_processes_pending.py  test_processes_read.py  test_processes_relayout.py  test_processes_save.py  test_static.py  test_storage.py
upload-bot/: README.md  pyproject.toml  requirements.txt
upload-bot/tests/: conftest.py  test_app_build.py  test_attachments.py  test_auth.py  test_config.py  test_naming.py  test_registry.py  test_session.py  test_staging.py
upload-bot/upload_bot/: __main__.py  app.py  attachments.py  auth.py  config.py  handlers.py  naming.py  registry.py  session.py  staging.py
(+195 files in other folders)
