[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "inja-engine"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["jsonschema~=4.23", "python-docx~=1.1"]

[project.optional-dependencies]
vertex = ["google-genai~=1.16"]

[project.scripts]
allocate-id = "allocate_id.cli:main"
extract-attachment = "extract_attachment.cli:main"
layout = "layout.cli:main"
merge = "merge.cli:main"
transcribe = "transcribe.cli:main"
validate = "validate.cli:main"

[tool.setuptools.packages.find]
include = ["engine_common*", "allocate_id*", "extract_attachment*", "layout*", "merge*", "transcribe*", "validate*"]
