[project]
name = "inja-ui-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi~=0.116",
    "uvicorn[standard]~=0.35",
    "argon2-cffi~=25.1",
    "itsdangerous~=2.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["inja_ui_backend*"]
