[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "inja-upload-bot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["python-telegram-bot~=22.0"]

[project.scripts]
upload-bot = "upload_bot.__main__:main"

[tool.setuptools.packages.find]
include = ["upload_bot*"]
